# Raytrace

./: .gitignore  CMakeLists.txt  Makefile  ProjectFiles.cmake  README.md  a.out  camera.hpp  hitable.hpp  main.cpp  material.hpp  output  output.ppm  progressBar.hpp  ray.cpp  sphere.hpp  vec3.cpp  vec3.hpp
include/: camera.hpp  hitable.hpp  hitable_list.hpp  imagefilepng.hpp  progressBar.hpp  ray.hpp  sphere.hpp  vec3.hpp
pics/: output1.xcf  output10.xcf  output10far.xcf  output10zoomed.xcf  output2.xcf  output3.xcf  output4.xcf  output5.xcf  output6aliased.xcf  output7diffused.xcf  output7gray.xcf  output7hitCorrect.xcf  output8metal.xcf  output8metalFuzz.xcf  output9bubble.xcf  output9water.xcf
src/: imagefilepng.cpp  main.cpp  sphere.cpp
tmp/: a.out  bla2.txt  main.cpp
tmp2/: parallel.cpp  ppm.cpp  ppm.hpp
